[gd_scene load_steps=5 format=3 uid="uid://bmxh341y6k0ri"]

[ext_resource type="Script" path="res://scenes/entity_base.gd" id="1_kouq3"]
[ext_resource type="Script" path="res://general scripts/hurtbox.gd" id="6_m1se6"]
[ext_resource type="Script" path="res://general scripts/hitbox.gd" id="7_7mmqq"]
[ext_resource type="Script" path="res://general scripts/health.gd" id="8_4ed4b"]

[node name="EntityBase" type="CharacterBody2D"]
scale = Vector2(2.5, 2.5)
collision_layer = 2
collision_mask = 5
motion_mode = 1
script = ExtResource("1_kouq3")

[node name="Root" type="Node2D" parent="."]

[node name="HurtBox" type="Area2D" parent="Root" node_paths=PackedStringArray("health")]
collision_layer = 16
collision_mask = 0
script = ExtResource("6_m1se6")
health = NodePath("../../Health")

[node name="HitBox" type="Area2D" parent="Root"]
position = Vector2(17.6, 0)
collision_layer = 0
collision_mask = 8
script = ExtResource("7_7mmqq")

[node name="Health" type="Node" parent="."]
script = ExtResource("8_4ed4b")

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
